--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>The Tea Cozy</title>
-    <link rel="stylesheet" href="/resources/css/style.css?" type="text/css"/>
-    <link rel="stylesheet" href="/resources/css/reset.css?" type="text/css"/>
+    <link rel="stylesheet" href="/resources/css/style.css?"/>
+    <link rel="stylesheet" href="/resources/css/reset.css?"/>
 </head>
 
 <body>
