Fix references in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>The Tea Cozy</title>
-    <link rel="stylesheet" href="/resources/css/style.css?"/>
-    <link rel="stylesheet" href="/resources/css/reset.css?"/>
+    <link rel="stylesheet" href="resources/css/style.css?"/>
+    <link rel="stylesheet" href="resources/css/reset.css?"/>
 </head>
 
 <body>
     <header class="heading-container">
-            <a href="/index.html?"><img src="/images/img-tea-cozy-logo.png?" alt="Tea Cozy logo" height="50px" width="auto"></a>
+            <a href="index.html?"><img src="images/img-tea-cozy-logo.png?" alt="Tea Cozy logo" height="50px" width="auto"></a>
             <nav class="nav">
                 <a href="#mission">Mission</a>
                 <a href="#featured">Featured Tea</a>
@@ -20,7 +20,7 @@
     <main>
         <div class="mission" id="mission">
             <div class="background-img">
-                <img src="/images/img-mission-background.jpg?" alt="Loose tea in jar" height="700px" width="1200px">
+                <img src="images/img-mission-background.jpg?" alt="Loose tea in jar" height="700px" width="1200px">
             </div>
             <div class="mission-foreground">
                 <div id="mission-words">
@@ -37,31 +37,31 @@
             </div>
             <div class="featured-imgs">
                 <figure>
-                    <img src="/images/img-berryblitz.jpg?" alt="Berry blitz tea">
+                    <img src="images/img-berryblitz.jpg?" alt="Berry blitz tea">
                     <figcaption>
                         <h4>Fall Berry Blitz Tea</h4>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-spiced-rum.jpg?" alt="Spiced rum tea">
+                    <img src="images/img-spiced-rum.jpg?" alt="Spiced rum tea">
                     <figcaption>
                         <h4>Spiced Rum Tea</h4>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-donut.jpg?" alt="Seasonal donuts">
+                    <img src="images/img-donut.jpg?" alt="Seasonal donuts">
                     <figcaption>
                         <h4>Seasonal Donuts</h4>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-myrtle-ave.jpg?" alt="Myrtle ave tea">
+                    <img src="images/img-myrtle-ave.jpg?" alt="Myrtle ave tea">
                     <figcaption>
                         <h4>Myrtle Ave Tea</h4>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-bedford-bizarre.jpg?" alt="Bedford bizarre tea">
+                    <img src="images/img-bedford-bizarre.jpg?" alt="Bedford bizarre tea">
                     <figcaption>
                         <h4>Bedford Bizarre Tea</h4>
                     </figcaption>
@@ -71,7 +71,7 @@
 
         <div class="locations" id="locations">
             <div class="background-img">
-                <img src="/images/img-locations-background.jpg?" alt="coffee cup in front of blurred backgorund">
+                <img src="images/img-locations-background.jpg?" alt="coffee cup in front of blurred backgorund">
             </div>
             <div class="locations-words">
                 <h2>Locations</h2>
