#mission and #featured made responsive

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <main>
         <div class="mission" id="mission">
-            <div class="background-img">
-                <img src="images/img-mission-background.jpg?" alt="Loose tea in jar" height="700px" width="1200px">
+            /*<div class="background-img">
+                <img src="images/img-mission-background.jpg?" alt="Loose tea in jar" height="700px" max-width="1200px">
             </div>
             <div class="mission-foreground">
                 <div id="mission-words">
